<resources>
    <string name="app_name">FoodPlanner</string>
    <string name="title_activity_main_app">MainActivityApp</string>
    <string name="enterYourMail">Please enter your E-mail</string>
    <string name="enterPassword">Please enter your password</string>
    <string name="login"><u>Login</u></string>
    <string name="loginWithGoogle">Login with google</string>
    <string name="signUp">SignUp</string>
    <string name="createNewAccount">" Create new account "</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hi_wecome_b">
    Hi, Wecome Back! 👋
    </string>
    <string name="hello_again">
    Hello again, you\'ve been missed!
    </string>
    <string name="create_an_a">
    Create an account
    </string>
    <string name="connect_wit">
    Plan your food better with us!
    </string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signUpWithMail">Sign up with email</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchHere">Search</string>


    <!-- Menu Title-->
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_plane">Plan</string>
    <string name="title_category">Category</string>
    <string name="dialog_positive_button">Sure</string>
    <string name="delete_favorite_dialog">Do you want to delete this item?</string>
    <string name="delete_title_dialog">Delete</string>
    <string name="dialog_negative_button">No</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="aboutus1">Quality food is our resolve, committed service is our culture and satisfied customer is our objective!</string>
    <string name="aboutus2">Our Services are fast emerging as a prominent player in corporate and retail food service, contract catering and allied industries. tadqa is best placed to serve customers with wide variety of offerings. Our commitment to customer satisfaction, quality food and value Product makes us stand out from the crowd, helping us carve new milestones in the food service industry.</string>
    <string name="aboutus3">Backed by Share India group, a leading name in financial service industry, our diversified business interests include in-house-developed brands, integrated contract catering and Support Services. To better cater to our customers, we have hired chefs with over 15 years of experience and expertise in entire spectrum of Indian cuisine.</string>
    <string name="aboutus4">Our Values:\n
        Food service is not just business but our passion.
</string>
    <string name="forgotpass">We just need your registered Email address to send you password reset instructions.</string>
    <string name="emptycart"><b>Your Cart is empty.</b>\n Your Cart lives to serve. Give it purpose fill it with Food. \n\n Continue Ordering or visit your Favourite Section.</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="emptyfav">What\'s my favourite food? Once you order out..\n -ABIGAIL BRESLIN. </string>
    <string name="autocomplete_result_show">Data result</string>
    <string name="guest">Guest</string>
    <string name="signout_option">Signout</string>
    <string name="settings_option">Settings</string>
    <string name="search_by_ingredient">Search By Ingredient</string>
    <string name="search_by_country">Search By Country</string>
    <string name="search_by_category">Search By Category</string>
    <string name="see_more"><u>See More</u></string>
    <string name="search_by_name">Search by meal name</string>
    <string name="search_title">Search</string>
    <string name="dialy_inspire_title">Daily Inspiration</string>
    <string name="addToPlan">Add to plan</string>
    <string name="add">Add</string>
    <string name="title_details">Details</string>
    <string name="add_to_plan">Add To Plan</string>
    <string name="added_to_plan">Added To Plan</string>
    <string name="title_search">Search</string>
    <string name="loading">Loading..</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message_dialog">Do you want to leave app?</string>
    <string name="nothingToShow">Nothing to show</string>
    <string name="enterYourName">Please enter your name</string>

<!--ADS-->
    <string name="ads_app_id">ca-app-pub-5341090982761131~9958166321</string>
    <string name="unit_banner_id">ca-app-pub-5341090982761131/6948859600</string>
</resources>