<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/signup_login_chooser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginTop="32dp"
    android:layout_marginRight="32dp"
    android:layout_marginBottom="32dp"
    android:background="@drawable/constrain_layout_login_corners"
    tools:context=".ui.features.register.RegisterActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/userNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sign_up" />

    <EditText
        android:id="@+id/signupEmailTxtView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/enterYourMail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#999EA1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

    <EditText
        android:id="@+id/passwordSignupTxtView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#999EA1"
        app:layout_constraintEnd_toEndOf="@+id/signupEmailTxtView"
        app:layout_constraintTop_toBottomOf="@+id/signupEmailTxtView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@drawable/button_state_color"
        android:text="@string/signUp"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordSignupTxtView"
        app:layout_constraintStart_toStartOf="@+id/passwordSignupTxtView"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignupTxtView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="@color/purbleButtonsEnabled"
        app:layout_constraintBottom_toTopOf="@+id/signupEmailTxtView"
        app:layout_constraintStart_toStartOf="@+id/signupEmailTxtView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="@color/purbleButtonsEnabled"
        app:layout_constraintBottom_toTopOf="@+id/passwordSignupTxtView"
        app:layout_constraintStart_toStartOf="@+id/passwordSignupTxtView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Already have an account ?"
        android:textColor="#999EA1"
        app:layout_constraintStart_toStartOf="@+id/signUpBtn"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

    <TextView
        android:id="@+id/loginTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/purbleButtonsEnabled"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User name"
        android:textColor="@color/purbleButtonsEnabled"
        app:layout_constraintBottom_toTopOf="@+id/userNameTextView"
        app:layout_constraintStart_toStartOf="@+id/userNameTextView" />

    <EditText
        android:id="@+id/userNameTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:hint="@string/enterYourName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#999EA1"
        app:layout_constraintEnd_toEndOf="@+id/signupEmailTxtView"
        app:layout_constraintStart_toStartOf="@+id/signupEmailTxtView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/continueAsGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Or continue as a guest"
        android:textColor="@color/purbleButtonsEnabled"
        app:layout_constraintEnd_toEndOf="@+id/loginTxtView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>