<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.features.sign_in_with_google.SignUpOrLoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="843dp"
        android:layout_height="589dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signup_login_chooser" />

    <View
        android:id="@+id/view"
        android:layout_width="413dp"
        android:layout_height="379dp"
        android:background="@color/purbleButtonsEnabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/gradient"
        android:layout_width="426dp"
        android:layout_height="361dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/signUpWithMailBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="376dp"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:text="@string/signUpWithMail" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInWithGoogle"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="--- or guest ---"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/guestButton"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:text="@string/guest"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Already have an account?"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/loginTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <View
        android:id="@+id/divider3"
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <View
        android:id="@+id/divider4"
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>